# minerva-dataset-pipeline

./: .env.example  .gitignore  README.md  debug_llm.py  pyproject.toml  verify_dataset.py
src/: __init__.py  config.py  main.py  utils.py
src/analysis/: class_distribution.py
src/augmentation/: __init__.py  class_balancing.py  hard_negative_generator.py  legal_structure_splitter.py  llm_cache.py  llm_synthetic.py  rare_license_augmenter.py
src/builder/: __init__.py  augmented_merge.py  hybrid_merge.py
src/exporter/: __init__.py  dataset_export.py
src/fetchers/: __init__.py  code_comments.py  fossology.py  scancode.py
